--- a/src/Componants/RightBanner/RightBanner.css
+++ b/src/Componants/RightBanner/RightBanner.css
@@ -3,6 +3,7 @@
 }
 .wrapright{
     padding: 20px 20px 0 0;
+    background-color: #f2f3f2;
 }
 .birthdayContainer{
     display: flex;
