--- a/src/Componants/Topbar/Topbar.css
+++ b/src/Componants/Topbar/Topbar.css
@@ -6,6 +6,7 @@
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 700;
 }
 .topbarLeft{flex: 3;}
 .logo{
